--- a/theme/templates/components/sonner.html
+++ b/theme/templates/components/sonner.html
@@ -16,7 +16,7 @@ Parâmetros:
 - class: Classes CSS adicionais (opcional)
 
 Exemplo:
-{% include "components/sonner.html" with position="top-right" duration=3000 %}
+include "components/sonner.html" with position="top-right" duration=3000
 #}
 
 {% with position=position|default:"bottom-right" duration=duration|default:4000 max_toasts=max_toasts|default:5 %}
