--- a/theme/templates/components/drawer.html
+++ b/theme/templates/components/drawer.html
@@ -16,13 +16,13 @@ Parâmetros:
 - snap_points: Lista de pontos de snap (ex: "25,50,75")
 
 Exemplo:
-{% include "components/drawer.html" with 
+include "components/drawer.html" with 
     trigger_text="Abrir Menu" 
     title="Menu de Navegação"
     description="Selecione uma opção"
     content="<p>Conteúdo do menu...</p>"
     direction="bottom"
-    size="lg" %}
+    size="lg"
 #}
 
 {% with direction=direction|default:"bottom" size=size|default:"md" trigger_variant=trigger_variant|default:"default" handle=handle|default:True %}
